codespeak-lib (1.0.1-1) UNRELEASED; urgency=low

  * New upstream release. (Closes: #541437)
  * New maintainer email address.
  * Bump Standards-Version to 3.8.3.
  * Fix new upstream tarball location in debian/watch.
  * Move to debhelper 7.

 -- Chris Lamb <lamby@debian.org>  Tue, 25 Aug 2009 02:10:19 +0100

codespeak-lib (0.9.1-3) unstable; urgency=low

  * Add patch to fix infinitely looping Subversion tests under Subversion
    1.5. (Closes: #489102)
  * Move to quilt patch system.
  * Add patch to make documentation generation during build more verbose.
  * Remove unnecessary Lintian overrides.
  * debian/control:
    - Replace some obsolete Suggests
    - Add Depends on ${misc:Depends}
    - Bump Standards-Version to 3.8.0.

 -- Chris Lamb <chris@chris-lamb.co.uk>  Tue, 15 Jul 2008 19:59:14 +0100

codespeak-lib (0.9.1-2) unstable; urgency=low

  * Tidy debian/rules.
  * Don't install /usr/share/pyshared/UNKNOWN-0.0.0.egg-info (Closes: #476606)

 -- Chris Lamb <chris@chris-lamb.co.uk>  Sat, 31 May 2008 15:11:06 +0100

codespeak-lib (0.9.1-1) unstable; urgency=low

  * New upstream release (Closes: #473528)
     - Documentation is now installed with sensible filenames (Closes:
     #413665)
  * Adjust Maintainers with permission from Guilherme Salgado and Alexandre
    Fayolle.
  * Remove '/usr/bin' from path when executing py.test to prevent collision
    with pypy-dev (Closes: #463568).
  * Disable buildcmodule.py from deleting greenlet module /usr/lib. Thanks to
    Mark Wooding <mdw@distorted.org.uk> (Closes: #471844).
  * Remove python-tkinter from Recommends (Closes: #448894, #473833)
  * Add texlive-extra-utils to Build-Depends.
  * Install "webdata" HTML and JavaScript files to fix web-based py.test.
    Patch by Alexandre Fayolle <afayolle@debian.org> (Closes: #434226).
  * Add debian/watch file.
  * Change doc-base section to "Programming/Python" from "Apps/Programming".
  * Update Lintian overrides to match new installed directories.
